// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders 1`] = `
<Pill
  id={1}
  label="mountain climbing"
>
  <div
    data-stylename="styles.pill"
    onMouseLeave={[Function]}
  >
    <span
      data-for="pill-label"
      data-stylename="styles.display-label"
      data-tip="Click to Search"
      onClick={[Function]}
    >
      mountain climbing
    </span>
  </div>
</Pill>
`;

exports[`Pill renders when editable 1`] = `
<Pill
  editable={true}
  id={1}
  label="mountain climbing"
>
  <div
    data-stylename="styles.pill"
    onMouseLeave={[Function]}
  >
    <span
      data-for="pill-label"
      data-stylename="styles.display-label"
      data-tip="Click to Search"
      onClick={[Function]}
    >
      mountain climbing
    </span>
    <Icon
      data-stylename="styles.remove-label"
      dataTip="Double click to delete"
      dataTipFor="pill-label"
      name="Ex"
      onClick={[Function]}
    >
      <span
        className="icon-Ex"
        data-for="pill-label"
        data-stylename="icon"
        data-tip="Double click to delete"
        onClick={[Function]}
      />
    </Icon>
  </div>
</Pill>
`;

exports[`Pillbox renders 1`] = `
<div
  data-stylename="styles.root"
>
  <div
    data-stylename="styles.pill-container"
  >
    <CSSTransitionGroup
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={400}
      transitionLeave={true}
      transitionLeaveTimeout={300}
      transitionName={
        Object {
          "enter": undefined,
          "enterActive": undefined,
          "leave": undefined,
          "leaveActive": undefined,
        }
      }
    >
      <Pill
        id={1}
        key="1"
        label="clickable"
        onClick={[Function]}
      />
      <Pill
        id={2}
        key="2"
        label="unclickable"
      />
    </CSSTransitionGroup>
  </div>
  <ReactTooltip
    clickable={false}
    delayShow={500}
    disable={true}
    effect="solid"
    id="pill-label"
    insecure={true}
    place="top"
    resizeHide={true}
    type="dark"
    wrapper="div"
  />
</div>
`;
